[package]
name = "muzzman-iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simple"
path = "./bin/simple_window/main.rs"
[[bin]]
name = "simple_settings"
path = "./bin/simple_settings_window/main.rs"

[[bin]]
name = "progress"
path = "./bin/progress_window/main.rs"

[[bin]]
name = "manager"
path = "./bin/manager_window/main.rs"
[[bin]]
name = "settings"
path = "./bin/settings_window/main.rs"

[[bin]]
name = "installer"
path = "./bin/installer/main.rs"

[dependencies]
async-trait = "0.1.64"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
# iced = {version = "0.7.0", features = ["svg", "debug", "image", "canvas"]}
iced = {git = "https://github.com/iced-rs/iced", features = ["debug", "svg", "tokio"]}
iced_native = {git = "https://github.com/iced-rs/iced"}
muzzman-daemon = "0.0.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.7.1"
