[package]
name = "muzzman-iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "muzzman_simple"
path = "./bin/simple_window/main.rs"
[[bin]]
name = "muzzman_simple_settings"
path = "./bin/simple_settings_window/main.rs"

[[bin]]
name = "muzzman_progress"
path = "./bin/progress_window/main.rs"

[[bin]]
name = "muzzman_manager"
path = "./bin/manager_window/main.rs"
[[bin]]
name = "muzzman_settings"
path = "./bin/settings_window/main.rs"

[[bin]]
name = "installer"
path = "./bin/installer/main.rs"

[target."cfg(windows)".dependencies]
winreg = "0.11.0"

[dependencies]
async-trait = "0.1.64"
clap = { version = "4", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.10.0"
# iced = {version = "0.7.0", features = ["svg", "debug", "image", "canvas"]}
iced = {version = "0.9", features = ["debug", "svg", "tokio"]}
iced_native = {version = "0.10"}
muzzman-daemon = "0.0.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.7.1"
